[gd_scene load_steps=4 format=2]

[ext_resource path="res://images/Main Ship - Base - Full health.png" type="Texture" id=1]
[ext_resource path="res://games/combat-game/fight/combat-player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 8 )

[node name="CombatPlayer" type="KinematicBody2D" groups=["agents"]]
collision_mask = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="ProjectilePos" type="Position2D" parent="."]
position = Vector2( 20, 0 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="ShootingCooldownTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="ShootingCooldownTimer" to="." method="_on_ShootingCooldownTimer_timeout"]
